# core-api

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
cmd/server/: main.go
core_api/: app.py  app.py.bak2  bridge.py  config.py  metrics.py  websocket.py
core_api/clients/: base.py  mojo_compute_client.py  news_nlp_client.py  signal_service_client.py  signal_service_http_client.py
core_api/routes/: __init__.py  analytics.py  backtest.py  compute.py  config.py  indmoney_auth.py  market.py  ml.py  monitoring.py  news.py  portfolio.py  predictions.py  sentiment.py  signals.py  stock_config.py  stocks.py  watchlist.py  ws.py  zerodha_auth.py
internal/database/: auth.go  db.go  market.go  news.go  portfolio.go  signals_extended.go  stock_config.go  stocks.go
internal/events/: subscriber.go
internal/handlers/: auth.go  config.go  handlers.go  market.go  monitor.go  monitoring.go  monitoring_extended.go  news.go  portfolio.go  quant_analytics.go  signals_extended.go  stock_config.go  stocks.go  system.go  watchlist.go
internal/websocket/: client.go  hub.go
tests/: conftest.py
tests/integration/: __init__.py  test_full_stack.py
tests/unit/: __init__.py  test_clients.py  test_routes.py
